<resources>
    <string name="app_name">Bus Schedule</string>
    <string name="settings_label">Settings</string>
    <string name="licenses_label">Licenses</string>

    <string name="timetable_label">Timetable</string>

    <string name="weekday">Weekdays</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="hour">Hour</string>
    <string name="station_tk">JR Takatsuki Station</string>
    <string name="station_tnd">JR Tonda Station</string>
    <string name="not_school_term">Not School Term</string>

    <string name="bus_type_nonstop">Nonstop Bus</string>
    <string name="no_bus">There is no bus at today</string>
    <string name="last_bus">Last bus</string>
    <string name="time_table_dialog_description">★ = Non stop bus</string>

    <string name="going_to_school">Going to school</string>
    <string name="coming_home">Coming home</string>

    <string name="message_need_update">Download of timetable data is complete</string>
    <string name="positive_button_need_update">Update</string>

    <string name="error_load_bus_data_message">Please check your internet connection.</string>
    <string name="error_retry_button">Retry</string>

    <string name="date_pattern">EEE, MMM d</string>

    <string name="settings_select_app_theme_title">Select Theme</string>
    <string name="settings_data_version_title">Timetable data</string>
    <string name="settings_app_version_title">Version</string>
    <string name="settings_view_source_title">View source on GitHub</string>
    <string name="settings_licenses_title">Licenses</string>

    <string name="settings_newer_version_available">Newer version is available</string>

    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_system_default">System default</string>
    <string name="theme_auto_battery">Work with battery saver</string>
</resources>
