<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <DropDownPreference
        app:entries="@array/app_theme_entries"
        app:entryValues="@array/app_theme_entry_value"
        app:key="select_app_theme"
        app:title="@string/settings_select_app_theme_title"
        app:useSimpleSummaryProvider="true" />

    <Preference
        app:key="data_version"
        app:title="@string/settings_data_version_title"
        tools:summary="20170401" />

    <Preference
        app:key="app_version"
        app:title="@string/settings_app_version_title"
        tools:summary="6.0.0" />

    <Preference
        app:icon="@drawable/ic_github"
        app:key="view_source"
        app:title="@string/settings_view_source_title" />

    <Preference
        app:key="licenses"
        app:title="@string/settings_licenses_title" />

</androidx.preference.PreferenceScreen>