<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.settings.SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        style="@style/Widget.MaterialComponents.AppBarLayout.Surface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:statusBarForeground="?attr/colorSurface">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Surface"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.numero.sojodia.ui.settings.item.SettingsItemView
                android:id="@+id/select_theme_settings_item_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="@string/settings_select_app_theme_title" />

            <com.numero.sojodia.ui.settings.item.SettingsItemView
                android:id="@+id/bus_data_settings_item_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/select_theme_settings_item_view"
                app:title="@string/settings_data_version_title" />

            <com.numero.sojodia.ui.settings.item.SettingsItemView
                android:id="@+id/app_version_settings_item_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_attention"
                app:iconTint="?attr/colorError"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bus_data_settings_item_view"
                app:title="@string/settings_app_version_title" />

            <com.numero.sojodia.ui.settings.item.SettingsItemView
                android:id="@+id/view_source_settings_item_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_github"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/app_version_settings_item_view"
                app:title="@string/settings_view_source_title" />

            <com.numero.sojodia.ui.settings.item.SettingsItemView
                android:id="@+id/licenses_settings_item_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_source_settings_item_view"
                app:title="@string/settings_licenses_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>