<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/time_table_dialog_background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintBottom_toTopOf="@+id/headerLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_clear"
        app:subtitleTextColor="@color/time_table_dialog_toolbar_text"
        app:titleTextColor="@color/time_table_dialog_toolbar_text" />

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/time_table_dialog_row_divider"
        android:background="@color/time_table_dialog_row_divider"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/timeTableRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/time_table_dialog_hour_text_width"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="@dimen/time_table_dialog_text_margin"
                android:paddingBottom="@dimen/time_table_dialog_text_margin"
                android:text="@string/hour"
                android:textColor="@color/time_table_dialog_hour_text"
                android:textSize="@dimen/time_table_dialog_header_text"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/time_table_dialog_row_divider"
                android:layout_height="match_parent"
                android:background="@color/time_table_dialog_row_divider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="@dimen/time_table_dialog_text_margin"
                android:paddingBottom="@dimen/time_table_dialog_text_margin"
                android:text="@string/weekday"
                android:textColor="@color/time_table_dialog_weekday_text"
                android:textSize="@dimen/time_table_dialog_header_text"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/time_table_dialog_row_divider"
                android:layout_height="match_parent"
                android:background="@color/time_table_dialog_row_divider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="@dimen/time_table_dialog_text_margin"
                android:paddingBottom="@dimen/time_table_dialog_text_margin"
                android:text="@string/saturday"
                android:textColor="@color/time_table_dialog_saturday_text"
                android:textSize="@dimen/time_table_dialog_header_text"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/time_table_dialog_row_divider"
                android:layout_height="match_parent"
                android:background="@color/time_table_dialog_row_divider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="@dimen/time_table_dialog_text_margin"
                android:paddingBottom="@dimen/time_table_dialog_text_margin"
                android:text="@string/sunday"
                android:textColor="@color/time_table_dialog_sunday_text"
                android:textSize="@dimen/time_table_dialog_header_text"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/time_table_dialog_row_divider"
            android:background="@color/time_table_dialog_row_divider" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/timeTableRecyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@+id/bottom_description_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerLayout"
        tools:listitem="@layout/holder_time_table_row" />

    <TextView
        android:id="@+id/bottom_description_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/time_table_dialog_description"
        android:textColor="@color/text_secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeTableRecyclerView" />

</androidx.constraintlayout.widget.ConstraintLayout>